# medical-diamond-search-v2

./: .gitignore  CMakeLists.txt  README.md
mds-core/: CMakeLists.txt  block.cpp  block.h  blockiterator.cpp  blockiterator.h  motionvector.cpp  motionvector.h  rgbimage.cpp  rgbimage.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h  vector.cpp  vector.h
mds-core/tests/: block.cpp  blockiterator.cpp  image.cpp  vec.cpp  vector.cpp
mds-decoder/: CMakeLists.txt  decoder.cpp  decoder.h  main.cpp
mds-decoder/tests/: catch.cpp  decoder.cpp
mds-encoder/: CMakeLists.txt  main.cpp  mds.cpp  mds.h  sad.cpp  sad.h
mds-encoder/tests/: catch.hpp  mds.cpp  sad.cpp
scripts/: encode-decode.sh  extract-frames.sh  make-video.sh
